--- a/resume.html
+++ b/resume.html
@@ -1,9 +1,5 @@
 <html>
-<head>
-	<title>Victoria Bian: Home</title>
-</head>
-
-<body marginwidth="0" marginheight="0" style="background-color:rgb(38, 38, 38)">
-	<embed width="100%" height="100%" name="plugin" src="VictoriaBian.pdf" type="application/pdf">
+<body marginwidth="0" marginheight="0" style="background-color: rgb(38,38,38)">
+<embed width="100%" height="100%" name="plugin" src="VictoriaBian.pdf" type="application/pdf">
 </body>
 </html>
