--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                                 <p>I am a sophomore studying computer science and economics in University of California, Berkeley. I am also interested in French and fashion and passionate about well-designed software, web development, opportunity and entrepreneurship.<br /><br />I like designing things, websites, apps, graphics. Feel free to contact me if you have some interesting ideas about design that you'd like to share with me.</p>
 
                                 <br /><br />
-                                <div class="social-profiles-title">SOCIAL PROFILES</div><div class="social-profiles"><a class="tw" title="Twitter" href="https://twitter.com/CestBleuClair"></a><a class="fb" title="Facebook" href="https://www.facebook.com/yinxue.bian"></a><a class="tu" title="Tumblr" href="http://victoriabian.tumblr.com/"></a><a class="pi" title="Pinterest" href="http://www.pinterest.com/VictoriaBian/"></a><a class="li" title="LinkedIn" href="http://www.linkedin.com/in/victoriabian/"></a><a class="dr" title="Dribbble" href="https://dribbble.com/VictoriaBian"></a></div>
+                                <div class="social-profiles-title">SOCIAL PROFILES</div><div class="social-profiles"><a class="be" title="Behance" href="https://www.behance.net/VictoriaBian"></a><a class="fb" title="Facebook" href="https://www.facebook.com/yinxue.bian"></a><a class="tu" title="Tumblr" href="http://victoriabian.tumblr.com/"></a><a class="pi" title="Pinterest" href="http://www.pinterest.com/VictoriaBian/"></a><a class="li" title="LinkedIn" href="http://www.linkedin.com/in/victoriabian/"></a><a class="dr" title="Dribbble" href="https://dribbble.com/VictoriaBian"></a></div>
                             </div>
                         </div>
                     </section>
