--- a/index.html
+++ b/index.html
@@ -64,18 +64,18 @@
 				<h1 class="name">Victoria Bian</h1>
 			</div>
 <!-- 			<div class="more-button"><a class="more-link" href="#more">More</a></div> -->
-			<div class="resume-button"><a href="download-resume.html">Download Resume</a></div>
+			<div class="resume-button"><a href="download-resume.html">Resume</a></div>
 		</header>
 		
 		<!-- about -->
 		<section class="about container">
 			<svg class="icon animated icon-tools"
 viewBox="0 0 32 32"><use xlink:href="#icon-tools"></use></svg>
-			<p>I'm an avid student at UC Berkeley, designer & developer. I love fiddling around with digital art and creating cool projects that can change the way we live. Although I have good knowledge of many programming languages and design tools, I'm always learning new stuff. I have just learned about Framer.js. I love what I do and hope to learn more for the rest of my life!
+			<p>I'm a second-year student at UC Berkeley studying Cognitive Science, Economics and Computer Science. I am passionate about new technologies, products and ideas. I love fiddling around with digital art and creating create cool projects that can change the way we live. 
 			</p>
 			<ul class="quotes">
 				<li>"I love design and code"</li>
-				<li>"I am a learner"</li>
+				<li>"I learn to become a UX unicorn"</li>
 				<li>"I always design with simplicity in mind"</li>
 				<li>"I found inspiration on Dribbble everyday"</li>
 				<li>"I don't waste time on Facebook"</li>
@@ -121,15 +121,15 @@ viewBox="0 0 32 32"><use xlink:href="#icon-tools"></use></svg>
 						</a>
 					</li>
 					<li class="thumb">
-						<a href="https://www.behance.net/VictoriaBian">
+						<a href="https://www.behance.net/gallery/23261305/Coursera-iOS-App-Redesign">
 							<figure class="rift">
-								<img src="css/images/telebears.png" alt="telebears">
-								<figcaption class="caption">TeleBears</figcaption>
+								<img src="css/images/coursera.png" alt="telebears">
+								<figcaption class="caption">Coursera Redesign</figcaption>
 							</figure>
 						</a>
 					</li>
 					<li class="thumb">
-						<a href="https://www.behance.net/gallery/22845159/Personal-Website">
+						<a href="https://github.com/VictoriaSnow/victoriabian.com">
 							<figure class="rift">
 								<img src="css/images/website.png" alt="website">
 								<figcaption class="caption">Personal Website</figcaption>
@@ -147,7 +147,7 @@ viewBox="0 0 32 32"><use xlink:href="#icon-tools"></use></svg>
 			<i class="mg map-it">
 				<div class="pulse"></div>
 			</i>
-			<h3>Contact me for any information. 510-333-9472</h3>
+			<h3>Contact me for any information. 510-333-9472:)</h3>
 			<div class="contact-button">
 				<a href="mailto:victoriasnow1124@gmail.com" class="email">
 					<span class="animated">Write Me</span>
@@ -220,7 +220,7 @@ viewBox="0 0 32 32"><use xlink:href="#icon-tools"></use></svg>
 		
 		<div id="modal" class="zoom-anim-dialog mfp-hide">
 			<h1>Colophon</h1>
-			<p>I hand-coded this site in HTML5, CSS3, and Sass. The icons are built as SVG format. I used <strong>Coda 2.5</strong> as text editor. The font utilized is <strong>Brandon Grotesque</strong>, a clean and cool sans serif type from Adobe Typekit. The map is taken from the fantastic project <a href="http://mapglyphs.com">Map Glyphs</a>, the ultimate CSS map font. Big thanks to Dmitry Semenov for <a href="http://dimsemenov.com/plugins/magnific-popup/">Magnific Popup</a> and <strong>Kyle Foster</strong> for <a href="http://kylefoster.me/projects/">Freemason and Rift</a>, two amazing jQuery plugins. Thanks for reading :)</p>
+			<p>I hand-coded this site in HTML5, CSS3, and Sass. I used <strong>Coda 2.5</strong> as text editor. The font utilized is <strong>Brandon Grotesque</strong>, a clean and cool sans serif type from Adobe Typekit. Daniel Bruce is the owner of those beautifully crafted <a href="http://www.entypo.com/">Entypo</a> icons. The map is taken from the fantastic project <a href="http://mapglyphs.com">Map Glyphs</a>, the ultimate CSS map font. Big thanks to Dmitry Semenov for <a href="http://dimsemenov.com/plugins/magnific-popup/">Magnific Popup</a> and <strong>Kyle Foster</strong> for <a href="http://kylefoster.me/projects/">Freemason and Rift</a>, two amazing jQuery plugins. Thanks for reading :)</p>
 		</div>
 		
 <!--
