--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 		<section class="about container">
 			<svg class="icon animated icon-tools"
 viewBox="0 0 32 32"><use xlink:href="#icon-tools"></use></svg>
-			<p>I'm a second-year student at UC Berkeley studying Cognitive Science, Economics and Computer Science. I am passionate about new technologies, products and ideas. I love fiddling around with digital art and creating create cool projects that can change the way we live. 
+			<p>I'm a second-year student at UC Berkeley studying Cognitive Science, Economics and Computer Science. I am passionate about new technologies, products and ideas. I love fiddling around with digital art and creating cool projects that can change the way we live. 
 			</p>
 			<ul class="quotes">
 				<li>"I love design and code"</li>
@@ -97,10 +97,10 @@ viewBox="0 0 32 32"><use xlink:href="#icon-tools"></use></svg>
 						</a>
 					</li>
 					<li class="thumb">
-						<a href="https://www.behance.net/gallery/22474889/Shots">
+						<a href="https://dribbble.com/shots/1932697-Pandora-Web-Player-Redesign">
 							<figure class="rift">
-								<img src="css/images/shots.png" alt="shots">
-								<figcaption class="caption">Shots UI</figcaption>
+								<img src="css/images/pandora.png" alt="shots">
+								<figcaption class="caption">Pandora Redesign</figcaption>
 							</figure>
 						</a>
 					</li>
