--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 	
 </head>
 
+
 <body>
 <!-- 	<div class="wrapper"> -->
 		<!-- header -->
@@ -63,22 +64,20 @@
 				</figure>
 				<h1 class="name">Victoria Bian</h1>
 			</div>
-<!-- 			<div class="more-button"><a class="more-link" href="#more">More</a></div> -->
-			<div class="resume-button"><a href="download-resume.html">Resume</a></div>
 		</header>
 		
 		<!-- about -->
 		<section class="about container">
 			<svg class="icon animated icon-tools"
 viewBox="0 0 32 32"><use xlink:href="#icon-tools"></use></svg>
-			<p>I'm a second-year student at UC Berkeley studying Cognitive Science, Economics and Computer Science. I am passionate about new technologies, products and ideas. I love fiddling around with digital art and creating cool projects that can change the way we live. 
+			<p>I'm Victoria, a UX designer and developer currently studying at University of California, Berkeley. I am passionate about new technologies, products and ideas. I love fiddling around with digital art and creating cool projects that can change the way we live. 
 			</p>
+			<div class="resume-button"><a href="doc/Victoria_Bian_Resume.pdf" id="resume">Resume</a></div>
 			<ul class="quotes">
 				<li>"I love design and code"</li>
-				<li>"I learn to become a UX unicorn"</li>
 				<li>"I always design with simplicity in mind"</li>
-				<li>"I found inspiration on Dribbble everyday"</li>
-				<li>"I don't waste time on Facebook"</li>
+				<li>"I find inspiration on Dribbble everyday"</li>
+				<li>"I'm really into Typography and Photography"</li>
 			</ul>
 		</section>
 		
@@ -97,7 +96,7 @@ viewBox="0 0 32 32"><use xlink:href="#icon-tools"></use></svg>
 						</a>
 					</li>
 					<li class="thumb">
-						<a href="https://dribbble.com/shots/1932697-Pandora-Web-Player-Redesign">
+						<a href="https://dribbble.com/shots/1932747-Pandora-Web-Player-Redesign">
 							<figure class="rift">
 								<img src="css/images/pandora.png" alt="shots">
 								<figcaption class="caption">Pandora Redesign</figcaption>
@@ -113,7 +112,7 @@ viewBox="0 0 32 32"><use xlink:href="#icon-tools"></use></svg>
 						</a>
 					</li>
 					<li class="thumb">
-						<a href="https://www.behance.net/gallery/22475155/Days-Matter">
+						<a href="https://github.com/VictoriaSnow/lifespice">
 							<figure class="rift">
 								<img src="css/images/daybox.png" alt="daybox">
 								<figcaption class="caption">Daybox App</figcaption>
@@ -166,7 +165,7 @@ viewBox="0 0 32 32"><use xlink:href="#icon-tools"></use></svg>
 			<section class="container">
 				<ul class="links">
 					<li>
-						<a class="linkedin" href="www.linkedin.com/in/victoriabian/">
+						<a class="linkedin" href="https://www.linkedin.com/in/victoriabian/">
 							<svg class="icon animated icon-linkedin" viewBox="0 0 20 20">
 								<use xlink:href="#icon-linkedin"></use>
 							</svg>
@@ -184,7 +183,7 @@ viewBox="0 0 32 32"><use xlink:href="#icon-tools"></use></svg>
 						</a>
 					</li>
 					<li>
-						<a class="dribbble" href="http://dribbble.com/victoriabian">
+						<a class="dribbble" href="https://dribbble.com/victoriabian">
 							<svg class="icon animated icon-dribbble" viewBox="0 0 20 20">
 								<use xlink:href="#icon-dribbble"></use>
 							</svg>
@@ -193,7 +192,7 @@ viewBox="0 0 32 32"><use xlink:href="#icon-tools"></use></svg>
 						</a>
 					</li>
 					<li>
-						<a class="twitter" href="http://twitter.com/jesuisvik">
+						<a class="twitter" href="https://twitter.com/jesuisvik">
 							<svg class="icon animated icon-twitter" viewBox="0 0 20 20">
 								<use xlink:href="#icon-twitter"></use>
 							</svg>
@@ -202,7 +201,7 @@ viewBox="0 0 32 32"><use xlink:href="#icon-tools"></use></svg>
 						</a>
 					</li>
 					<li>
-						<a class="pinterest" href="http://www.pinterest.com/VictoriaBian/">
+						<a class="pinterest" href="https://www.pinterest.com/VictoriaBian/">
 							<svg class="icon animated icon-pinterest" viewBox="0 0 20 20">
 								<use xlink:href="#icon-pinterest"></use>
 							</svg>
@@ -223,28 +222,6 @@ viewBox="0 0 32 32"><use xlink:href="#icon-tools"></use></svg>
 			<p>I hand-coded this site in HTML5, CSS3, and Sass. I used <strong>Coda 2.5</strong> as text editor. The font utilized is <strong>Brandon Grotesque</strong>, a clean and cool sans serif type from Adobe Typekit. Daniel Bruce is the owner of those beautifully crafted <a href="http://www.entypo.com/">Entypo</a> icons. The map is taken from the fantastic project <a href="http://mapglyphs.com">Map Glyphs</a>, the ultimate CSS map font. Big thanks to Dmitry Semenov for <a href="http://dimsemenov.com/plugins/magnific-popup/">Magnific Popup</a> and <strong>Kyle Foster</strong> for <a href="http://kylefoster.me/projects/">Freemason and Rift</a>, two amazing jQuery plugins. Thanks for reading :)</p>
 		</div>
 		
-<!--
-		<div id="more" class="zoom-anim-dialog mfp-hide">
-			<h1>More About Me</h1>
-		</div>
--->
-<!--
-		<div id="resume" class="zoom-anim-dialog mfp-hide">
-			<img src="css/images/resume@2x.png" alt="resume">
-			<div class="download-button">
-				<a href="download-resume.html" class="download">
-					<span class="animated">Download Resume</span>
-					<svg class="icon icon-feather" viewBox="0 0 32 32">
-						<use xlink:href="#icon-feather"></use>
-					</svg>
-				</a>
-			</div>
-			
-		</div>
--->
-		
-
-<!-- 	</div> -->
 	<script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.nicescroll/3.5.1/jquery.nicescroll.min.js"></script>
     <script src="js/freemason.min.js"></script>
