--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 viewBox="0 0 32 32"><use xlink:href="#icon-tools"></use></svg>
 			<p>I'm Victoria, a UX designer and developer currently studying at University of California, Berkeley. I am passionate about new technologies, products and ideas. I love fiddling around with digital art and creating cool projects that can change the way we live. 
 			</p>
-			<div class="resume-button"><a href="doc/Victoria_Bian_Resume.pdf" id="resume">Resume</a></div>
+			<div class="resume-button"><a href="doc/Victoria_Bian_Resume.pdf" class="resume">Resume</a></div>
 			<ul class="quotes">
 				<li>"I love design and code"</li>
 				<li>"I always design with simplicity in mind"</li>
