--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 		<section class="about container">
 			<svg class="icon animated icon-tools"
 viewBox="0 0 32 32"><use xlink:href="#icon-tools"></use></svg>
-			<p>I'm Victoria, a UX designer and developer currently studying at University of California, Berkeley. I am passionate about new technologies, products and ideas. I love fiddling around with digital art and creating cool projects that can change the way we live. 
+			<p>Hello! I’m Victoria Bian, a UX designer and developer currently studying Cognitive Science and Human-Centered Design at University of California, Berkeley. I am passionate about new technologies, products and ideas. I love fiddling around with digital art and creating cool projects that can change the way we live. 
 			</p>
 			<div class="resume-button"><a href="doc/Victoria_Bian_Resume.pdf" class="resume">Resume</a></div>
 			<ul class="quotes">
