--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<meta property="og:title" content="Victoria Bian: Designer & Developer" />
     <meta property="og:url" content="http://www.victoriabian.com" />
     <meta property="og:image" content="css/images/icon.png" />
-    <meta property="og:description" content="I'm an avid student at UC Berkeley, designer & developer. I love fiddling around with digital art and creating cool projects that can change the way we live. Although I have good knowledge of many programming languages and design tools, I'm always learning new stuff. I have just learned about Framer.js. I love what I do and hope to learn more for the rest of my life!" />
+    <meta property="og:description" content="I'm Victoria, a UX designer and developer currently studying Cognitive Science and Design at University of California, Berkeley. I am passionate about new technologies, products and ideas. I love fiddling around with digital art and creating cool projects that can change the way we live." />
     <meta property="og:site_name" content="Victoria Bian: Designer & Developer" />
     
     <!-- TypeKit -->
@@ -70,7 +70,7 @@
 		<section class="about container">
 			<svg class="icon animated icon-tools"
 viewBox="0 0 32 32"><use xlink:href="#icon-tools"></use></svg>
-			<p>Hello! I’m Victoria Bian, a UX designer and developer currently studying Cognitive Science and Human-Centered Design at University of California, Berkeley. I am passionate about new technologies, products and ideas. I love fiddling around with digital art and creating cool projects that can change the way we live. 
+			<p>I'm Victoria, a UX designer and developer currently studying Cognitive Science and Design at University of California, Berkeley. I am passionate about new technologies, products and ideas. I love fiddling around with digital art and creating cool projects that can change the way we live. 
 			</p>
 			<div class="resume-button"><a href="doc/Victoria_Bian_Resume.pdf" class="resume">Resume</a></div>
 			<ul class="quotes">
