--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ viewBox="0 0 32 32"><use xlink:href="#icon-tools"></use></svg>
 		<!-- portfolio -->
 		<section class="portfolio">
 			<h2><a href="https://github.com/VictoriaSnow" class="work">My latest work.</a></h2>
-							<h3>There’s no mystery or grand scheme. It’s about working tirelessly until it feels right.</h3>
+			<h3>There’s no mystery or grand scheme. It’s about working tirelessly until it feels right.</h3>
 			<div class="thumb-wrapper">
 				<ul class="thumb-list">
 					<li class="thumb">
@@ -142,7 +142,7 @@ viewBox="0 0 32 32"><use xlink:href="#icon-tools"></use></svg>
 		
 		<!-- contact -->
 		<section class="contact">
-			<h3>I live in Berkeley. A sunny city in San Francisco Bay Area.</h3>
+			<h3>I live in Berkeley. A liberal city in San Francisco Bay Area.</h3>
 			<i class="mg map-it">
 				<div class="pulse"></div>
 			</i>
